# ibd_inference_cpp

./: .gitmodules  meson.build
inc/: PBWT.hpp  RPBWT.hpp  extract_ibd_segments.hpp  hap-ibd.hpp  match.hpp  read_rate_map.hpp  segment.hpp  statistics.hpp  utils.hpp  vcf.hpp
src/: PBWT.cpp  RPBWT.cpp  extract_ibd_segments.cpp  main.cpp  match.cpp  read_rate_map.cpp  segment.cpp  statistics.cpp  utils.cpp  vcf.cpp
subprojects/: htslib.wrap
subprojects/htslib-1.20/: .meson-subproject-wrap-hash.txt
